fixed flex-gap issue and replaced it with margin

--- a/styles.css
+++ b/styles.css
@@ -36,12 +36,13 @@ nav {
 .navbar-menu {
   list-style: none;
   display: flex;
-  gap: 24px;
+  flex-wrap: wrap;
 }
 
 .navbar-menu li a {
   text-decoration: none;
   color: #fff;
+  margin-right: 24px;
 }
 
 /* MAIN */
@@ -52,13 +53,13 @@ main {
   flex-direction: column;
   align-items: center;
   padding: 0px 24px 24px 24px;
-  gap: 48px;
 }
 
 /* HERO SECTION */
 .hero {
   display: flex;
   width: 100%;
+  margin-bottom: 48px;
 }
 
 .hero img {
@@ -70,23 +71,22 @@ main {
   display: flex;
   width: 100%;
   flex-direction: column;
-  gap: 32px;
 }
 
 .collage-container {
   column-count: 3;
-  gap: 18px;
 }
 
 .collage-image {
   width: 100%;
-  object-fit: cover;
+  object-fit: none;
+  border-radius: 8px;
 }
 
 .collage-1,
 .collage-3,
 .collage-5 {
-  margin-bottom: 12px;
+  margin-bottom: 10px;
 }
 
 .collage-6A,
@@ -96,20 +96,23 @@ main {
 
 /* MOBILE RESPONSIVE */
 @media only screen and (max-width: 640px) {
-  .navbar-menu {
-    gap: 8px;
+  .navbar-menu li a {
+    margin-right: 12px;
   }
 
   .collage-container {
     column-count: 2;
-    gap: unset;
+  }
+
+  .collage-image {
+    object-fit: cover;
   }
 
   .collage-1,
   .collage-2,
   .collage-4,
   .collage-5 {
-    margin-bottom: 10px;
+    margin-bottom: 8px;
   }
 
   .collage-6,
